@startuml
'https://SubscriptionServicetuml.com/class-diagram

hide circle

title US08 Class Diagram


class BookController  {
}

class BookService {
+updateBook():void
}

interface BookRepository <<interface>> {
+updateBook(): book
+saveBook(book obj): Result
}

class Book   {
+isbn
+title
+description
+author
}

BookController..> BookService:uses
BookService ..>  BookRepository:uses
BookRepository "1" -->"1..*" Book: Records
@enduml
